interface additions added city gui fixed daylight cycle events